# PTSD-Practice-Giraffe-Adventure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dict/: chinese.md
include/: AnimatedCharacter.hpp  App.hpp  AppUtil.hpp  BackgroundImage.hpp  Character.hpp  PhaseResourceManger.hpp  TaskText.hpp
src/: AnimatedCharacter.cpp  AppEnd.cpp  AppStart.cpp  AppUpdate.cpp  AppUtil.cpp  PhaseManager.cpp
